fix overflow dev card

--- a/scss/NewsDev.scss
+++ b/scss/NewsDev.scss
@@ -57,6 +57,7 @@
                         align-items: center;
                         p {
                             text-align: center;
+                            overflow: scroll;
                         }
                     }
                     .discovery {
